fixed error in cm symmetry and aligned some symmetries to have more natural vertical glide/reflection axes.

--- a/eschersketch.css
+++ b/eschersketch.css
@@ -67,7 +67,11 @@ a:hover, a.enabled { color: #000; }
 }
 
 .selected { background: rgba(150,150,150,0.3); }
-.grad {       background-image: linear-gradient(to bottom, #000, #fff);}
+.grad {
+    background-image: linear-gradient(to bottom, #000, #fff);
+background-image: -webkit-linear-gradient(top, #000, #fff);
+
+}
 .grad-red {   background-image: linear-gradient(to bottom, #f00, #fff);}
 .grad-green { background-image: linear-gradient(to bottom, #0f0, #fff);}
 .grad-blue {  background-image: linear-gradient(to bottom, #00f, #fff);}
